<resources>
    <string name="app_name">Simple UII</string>
    <string name="sign_in">Instagram</string>
    <string name="username">Username</string>
    <string name="log_in">LOG IN</string>
    <string name="log_in_with">Log in with</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>

    <string name="or">or</string>

    <string name="dont_have_account">Don\'t have an
account?</string>
    <string name="forgot_password">Forgot
Password?</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>